correct junit test discovery and isTargetInstrumented